--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,6 +1,34 @@
 $color1: #fbe394;
 $color2: #1c1b33;
 
+@keyframes beedance {
+  0% {
+    margin-bottom: 0px;
+    margin-left: 0px;
+    transform: rotate(0deg);
+  }
+  30% {
+    margin-bottom: 35px;
+    margin-left: 40px;
+    transform: rotate(-15deg);
+  }
+  60% {
+    margin-bottom: 40px;
+    margin-left: 30px;
+    transform: rotate(5deg);
+  }
+  80% {
+    margin-bottom: 20px;
+    margin-left: 15px;
+    transform: rotate(-5deg);
+  }
+  100% {
+    margin-bottom: 0px;
+    margin-left: 0px;
+    transform: rotate(0deg);
+  }
+}
+
 label {
   display: block;
   margin-top: 10px;
@@ -18,6 +46,9 @@ h1 span {
   content: url("@assets/images/bee.png");
   width: 30vw;
   height: auto;
+  animation-name: beedance;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
 }
 
 .card-container.card {
@@ -38,10 +69,21 @@ h1 span {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
+input:not(is-invalid):focus {
+  border-color: $color1;
+  box-shadow: 0 0 0 0.15rem $color1;
+}
+
 .btn {
   margin-top: 20px; /* Adjust the value as needed */
   background-color: $color1;
+  transition: all 0.3s ease;
 }
+.btn:hover {
+  color: $color1;
+  border-color: $color1;
+}
+
 .align-right {
   float: right;
 }
