:zap: add category page

--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -1,1 +1,26 @@
-<p>category works!</p>
+<app-navbar />
+<div class="row">
+  <div
+    class="col-md-12 d-flex align-items-center justify-content-center vh-100"
+  >
+    <div class="card card-container">
+      <h1>Q<span>uestion</span> L<span>ist</span></h1>
+      <div
+        class="d-flex flex-column question-group align-items-center justify-content-center"
+      >
+        <button class="question-btn btn">
+          1. ตอบคำถามการบวกลบเลขเบื้องต้น 101
+        </button>
+        <button class="question-btn btn">
+          2. ตอบคำถามการบวกลบเลขเบื้องต้น 102
+        </button>
+        <button class="question-btn btn">
+          3. ตอบคำถามการคูณหารเลขเบื้องต้น 201
+        </button>
+        <button class="question-btn btn">
+          4. ตอบคำถามการคูณหารเลขเบื้องต้น 202
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
