--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,20 @@
 
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
+
+$color1: #fbe394;
+$color2: #1c1b33;
+
+h1 {
+  color: $color1 !important;
+}
+
+h1 span {
+  color: #f7f7f7 !important;
+}
+
+@media only screen and (max-width: 770px) {
+  .mobile-hidden {
+    display: none !important;
+  }
+}
