--- a/src/app/pages/category/category.component.scss
+++ b/src/app/pages/category/category.component.scss
@@ -4,6 +4,8 @@ $color2: #1c1b33;
 .card-container.card {
   width: 50vw;
   height: auto;
+  max-height: 70vh;
+  overflow-y: scroll;
   padding: 35px 35px;
 }
 
