--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -8,17 +8,12 @@
       <div
         class="d-flex flex-column question-group align-items-center justify-content-center"
       >
-        <button class="question-btn btn">
-          1. ตอบคำถามการบวกลบเลขเบื้องต้น 101
-        </button>
-        <button class="question-btn btn">
-          2. ตอบคำถามการบวกลบเลขเบื้องต้น 102
-        </button>
-        <button class="question-btn btn">
-          3. ตอบคำถามการคูณหารเลขเบื้องต้น 201
-        </button>
-        <button class="question-btn btn">
-          4. ตอบคำถามการคูณหารเลขเบื้องต้น 202
+        <button
+          *ngFor="let category of categories; let i = index"
+          (click)="goToQuiz(category)"
+          class="question-btn btn"
+        >
+          {{ i + 1 }}. {{ category.title }}
         </button>
       </div>
     </div>
