--- a/src/app/pages/quiz/quiz.component.html
+++ b/src/app/pages/quiz/quiz.component.html
@@ -1,1 +1,31 @@
-<p>quiz works!</p>
+<app-navbar />
+<div class="row">
+  <!-- <div class="col-md-12 d-flex align-items-center justify-content-center">
+    ตอบคำถามการบวกลบเลขเบื้องต้น 101
+  </div> -->
+  <div
+    class="col-md-12 d-flex align-items-center justify-content-center vh-100"
+  >
+    <button class="btn nav-btn" [disabled]="true">&lt;</button>
+    <div class="d-flex flex-column align-items-center justify-content-center">
+      <h4>{{ categoryTitle }}</h4>
+      <div class="card card-container">
+        <h6>ข้อที่ 1 ข้อใดถูกต้อง</h6>
+        <div
+          class="d-flex flex-column answer-group align-items-center justify-content-center"
+        >
+          <button
+            *ngFor="let answer of answers; let i = index"
+            (click)="setAnswer(answer)"
+            [ngClass]="{ active: answer === selectedAnswer }"
+            class="answer-btn btn"
+          >
+            {{ i + 1 }}. {{ answer }}
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <button class="btn nav-btn" [disabled]="selectedAnswer === ''">&gt;</button>
+  </div>
+</div>
