:zap: keep focus on quiz nav bar

--- a/src/app/pages/quiz/quiz.component.html
+++ b/src/app/pages/quiz/quiz.component.html
@@ -9,6 +9,7 @@
       <div class="quiz-group">
         <button
           *ngFor="let id of quizIds"
+          id="quiz_{{ id }}"
           class="btn quiz-btn"
           (click)="goTo(id)"
           [ngClass]="{
