--- a/src/app/pages/quiz/quiz.component.scss
+++ b/src/app/pages/quiz/quiz.component.scss
@@ -6,7 +6,7 @@ $color2: #1c1b33;
   height: auto;
   max-height: 70vh;
   overflow-y: scroll;
-  padding: 35px 35px;
+  padding: 5px 35px 35px 35px;
 }
 
 .quiz-group {
@@ -25,6 +25,23 @@ $color2: #1c1b33;
   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+#progressBar {
+  width: 100%;
+  margin: 15px auto;
+  height: 5px;
+  background-color: #f7f7f760;
+  border-radius: 50px;
+}
+
+#progressBar .bar {
+  height: 100%;
+  text-align: right;
+  line-height: 22px; /* same as #progressBar height if we want text middle aligned */
+  background-color: $color1;
+  box-sizing: border-box;
+  border-radius: 50px;
 }
 
 .answer-group {
