:zap: prepare for submit

--- a/src/app/pages/quiz/quiz.component.html
+++ b/src/app/pages/quiz/quiz.component.html
@@ -1,5 +1,5 @@
 <app-navbar />
-<app-timeup [show]="isTimeUp" [answers]="finalAnswer" />
+<app-timeup [show]="isTimeUp" [answers]="finalAnswers" />
 <div class="row">
   <div
     class="col-md-12 d-flex align-items-center justify-content-center vh-100"
