--- a/src/app/pages/quiz/timeup/timeup.component.html
+++ b/src/app/pages/quiz/timeup/timeup.component.html
@@ -5,6 +5,6 @@
   <div class="card card-container">
     <h3>หมดเวลาตอบคำถาม</h3>
     <img class="logo-img" />
-    <button class="btn">Submit</button>
+    <button class="btn" (click)="submit()">Submit</button>
   </div>
 </div>
