--- a/src/app/pages/quiz/timeup/timeup.component.scss
+++ b/src/app/pages/quiz/timeup/timeup.component.scss
@@ -52,7 +52,7 @@ $color2: #1c1b33;
 .btn {
   background-color: $color1;
   color: $color2 !important;
-  width: 100%;
+  width: 10vw;
   margin-top: 10px;
   padding: 10px 10px;
   border-color: $color1;
@@ -73,5 +73,9 @@ $color2: #1c1b33;
 
   .logo-img {
     width: 25vw;
+  }
+
+  .btn {
+    width: 100%;
   }
 }
