--- a/src/app/pages/result/result.component.html
+++ b/src/app/pages/result/result.component.html
@@ -1,1 +1,22 @@
-<p>result works!</p>
+<app-navbar />
+<div class="row">
+  <div
+    class="col-md-12 d-flex align-items-center justify-content-center vh-100"
+  >
+    <div class="card card-container">
+      <div
+        class="d-flex align-items-center justify-content-center"
+        style="height: 100%"
+      >
+        <h5>
+          ผลคะแนนของคุณคือ {{ getScore.score }} คะแนน ({{
+            (getScore.score * 100) / getScore.fullScore
+          }}%)
+        </h5>
+      </div>
+      <div class="d-flex align-items-center justify-content-center">
+        <button class="btn" (click)="goBack()">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
