:zap: finish toast alert!

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <h1>B<span>ee</span> Q<span>uiz</span></h1>
     </li>
     <li>
-      <a>{{ storageService.getUser()!.fullName }}</a>
+      <a>{{ getName }}</a>
     </li>
     <li>
       <a class="btn" style="margin-left: 20px" (click)="logout()">Logout</a>
