--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+$color1: #fbe394;
+$color2: #1c1b33;
+
 body {
   background: url("@assets/images/background.jpg");
   background-position: center;
@@ -5,4 +8,30 @@ body {
   background-size: cover;
   height: 100vh;
   overflow: hidden;
+}
+
+.toast-container {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100vw;
+  height: 100vh;
+  z-index: 15;
+}
+
+.toast-box {
+  position: absolute;
+  right: 0%;
+  bottom: 0%;
+  width: 300px;
+  margin: 25px;
+  text-align: left;
+  align-items: center;
+}
+
+.toast {
+  padding: 15px;
+  margin-top: 15px;
+  background-color: $color2;
+  color: $color1 !important;
 }
