--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -43,6 +43,13 @@ a {
   border-color: $color1;
 }
 
+@media only screen and (max-width: 770px) {
+  ul {
+    right: 15px;
+    top: 15px;
+  }
+}
+
 @media only screen and (max-width: 481px) {
   nav {
     background-color: $color2;
