--- a/src/app/pages/category/category.component.scss
+++ b/src/app/pages/category/category.component.scss
@@ -5,7 +5,7 @@ $color2: #1c1b33;
   width: 50vw;
   height: auto;
   max-height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 35px 35px;
 }
 
