--- a/src/app/pages/quiz/timeup/timeup.component.scss
+++ b/src/app/pages/quiz/timeup/timeup.component.scss
@@ -34,7 +34,7 @@ $color2: #1c1b33;
 .card-container.card {
   width: 30vw;
   max-height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 35px 35px;
   text-align: center;
   align-items: center;
