--- a/src/app/pages/quiz/quiz.component.scss
+++ b/src/app/pages/quiz/quiz.component.scss
@@ -2,16 +2,16 @@ $color1: #fbe394;
 $color2: #1c1b33;
 
 .card-container.card {
-  width: 50vw;
+  width: 50dvw;
   height: auto;
-  max-height: 70vh;
+  max-height: 70dvh;
   overflow-y: auto;
   padding: 5px 35px 35px 35px;
 }
 
 .quiz-group {
   display: flex;
-  max-width: 50vw;
+  max-width: 50dvw;
   overflow-y: auto;
 }
 
@@ -58,9 +58,9 @@ $color2: #1c1b33;
   text-align: start;
 }
 .btn:hover {
-  background-color: $color1;
-  color: $color2;
-  border-color: $color2;
+  background-color: $color2;
+  color: $color1;
+  border-color: $color1;
 }
 .btn.active {
   background-color: $color1;
@@ -119,10 +119,19 @@ $color2: #1c1b33;
   color: $color1;
 }
 
+@media (pointer: fine) {
+  .btn:hover {
+    background-color: $color1;
+    color: $color2;
+    border-color: $color1;
+    font-weight: bold;
+  }
+}
+
 @media only screen and (max-width: 770px) {
   .card-container.card {
     width: auto;
-    max-width: 90vw;
+    max-width: 90dvw;
   }
 
   h6 {
@@ -131,7 +140,7 @@ $color2: #1c1b33;
 
   .quiz-group {
     display: flex;
-    max-width: 90vw;
+    max-width: 90dvw;
     overflow-y: auto;
   }
 
@@ -141,7 +150,7 @@ $color2: #1c1b33;
   }
 
   .answer-btn {
-    width: 70vw;
+    width: 70dvw;
   }
 
   .nav-btn-group {
