--- a/src/app/pages/category/category.component.scss
+++ b/src/app/pages/category/category.component.scss
@@ -2,9 +2,9 @@ $color1: #fbe394;
 $color2: #1c1b33;
 
 .card-container.card {
-  width: 50vw;
+  width: 50dvw;
   height: auto;
-  max-height: 70vh;
+  max-height: 70dvh;
   overflow-y: auto;
   padding: 35px 35px;
 }
@@ -43,10 +43,10 @@ $color2: #1c1b33;
 @media only screen and (max-width: 770px) {
   .card-container.card {
     width: auto;
-    max-width: 90vw;
+    max-width: 90dvw;
   }
 
   .btn {
-    width: 70vw;
+    width: 70dvw;
   }
 }
