--- a/src/app/pages/quiz/timeup/timeup.component.scss
+++ b/src/app/pages/quiz/timeup/timeup.component.scss
@@ -22,8 +22,8 @@ $color2: #1c1b33;
 .modal-backdrop {
   display: none;
   background-color: #00000060;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   z-index: 10;
 }
 
@@ -32,8 +32,8 @@ $color2: #1c1b33;
 }
 
 .card-container.card {
-  width: 30vw;
-  max-height: 70vh;
+  width: 30dvw;
+  max-height: 70dvh;
   overflow-y: auto;
   padding: 35px 35px;
   text-align: center;
@@ -42,7 +42,7 @@ $color2: #1c1b33;
 
 .logo-img {
   content: url("@assets/images/bee.png");
-  width: 10vw;
+  width: 10dvw;
   height: auto;
   animation-name: beedance;
   animation-duration: 4s;
@@ -52,7 +52,7 @@ $color2: #1c1b33;
 .btn {
   background-color: $color1;
   color: $color2 !important;
-  width: 10vw;
+  width: 10dvw;
   margin-top: 10px;
   padding: 10px 10px;
   border-color: $color1;
@@ -68,11 +68,11 @@ $color2: #1c1b33;
 @media only screen and (max-width: 770px) {
   .card-container.card {
     width: auto;
-    max-width: 90vw;
+    max-width: 90dvw;
   }
 
   .logo-img {
-    width: 25vw;
+    width: 25dvw;
   }
 
   .btn {
