--- a/src/app/pages/result/result.component.scss
+++ b/src/app/pages/result/result.component.scss
@@ -2,8 +2,8 @@ $color1: #fbe394;
 $color2: #1c1b33;
 
 .card-container.card {
-  width: 50vw;
-  height: 50vh;
+  width: 50dvw;
+  height: 50dvh;
   padding: 35px 35px;
 }
 
@@ -22,7 +22,7 @@ $color2: #1c1b33;
 .btn {
   background-color: $color1;
   color: $color2 !important;
-  width: 10vw;
+  width: 10dvw;
   margin-top: 10px;
   padding: 10px 10px;
   border-color: $color1;
@@ -38,8 +38,8 @@ $color2: #1c1b33;
 @media only screen and (max-width: 770px) {
   .card-container.card {
     width: auto;
-    max-width: 90vw;
-    height: 40vh;
+    max-width: 90dvw;
+    height: 40dvh;
   }
 
   .btn {
